Call Notification Panel - Overlapping issue fix

--- a/assets/css/agent-customer.css
+++ b/assets/css/agent-customer.css
@@ -16062,7 +16062,8 @@ timeline-event .outbound-panel-right:after {
     bottom: 0;
     z-index: 200;
     width: 300px;
-    height: 180px;
+    min-height: 180px;
+    height: auto;
     background: #fff;
     position: fixed;
     border-radius : 8px;
